--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-custom-scroller": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-img-mapper": "^1.5.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scrollbars-custom": "^4.1.1",
