--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scrollbars-custom": "^4.1.1",
+    "use-image": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
