--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "./logo/SMK EXPLORE_Black.svg",
+      "src": "./logo/SMK-EXPLORE_Black.svg",
       "type": "image/png",
       "sizes": "192x192"
     },
