--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "art_explorer",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://127.0.0.1:8000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
