--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.6",
+    "buffer": "^6.0.3",
     "framer-motion": "^10.11.2",
     "konva": "^8.4.3",
     "openai": "^3.2.1",
