--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "art_explorer",
   "version": "0.1.0",
-  "homepage": "http://louiemou.github.io/art-explorer",
+  "homepage": "http://louiemou.github.io/smkcreate",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
